rag-intro lesson

--- a/01-intro/llm-zoomcamp-setup.ipynb
+++ b/01-intro/llm-zoomcamp-setup.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "a766af81-7246-4bd2-86f9-4dabba5442e7",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "39d7743e-0144-44b2-b046-65068616c66b",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "f758c21e-f5ee-4836-ae55-9fe27f98dfae",
    "metadata": {},
    "outputs": [],
@@ -65,17 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "80c6aadb-f245-4ec7-9fc0-c4df7b51a80b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"To determine if it's too late to join a course, you'll need to consider several factors:\\n\\n1. **Course Enrollment Deadline:** Check the official website or contact the institution offering the course to find out the enrollment deadline.\\n\\n2. **Start Date:** Determine when the course has started or is about to start. Some courses allow late registrations within a certain time frame after the start date.\\n\\n3. **Course Type:** For online or self-paced courses, you might find more flexibility in joining later. In contrast, sequential, in-person courses might be stricter with deadlines.\\n\\n4. **Availability:** See if there are still spots available in the course if it's a limited-enrollment situation.\\n\\n5. **Catch-Up Work:** Consider whether you are prepared to catch up on any missed content or work if the course has already begun.\\n\\n6. **Communication:** Reach out to the course instructor or administrator to explain your situation and inquire about the possibility of joining late.\\n\\nIf you can provide more specific information about the course in question, such as its name or provider, I might be able to offer more tailored advice.\""
+       "'I would need a bit more information to give you a tailored response. However, generally speaking, whether it is too late to join a course depends on several factors, such as:\\n\\n1. **Enrollment Deadlines:** Check if the course has a specific enrollment deadline. If the deadline has passed, you might not be able to join unless exceptions are made.\\n\\n2. **Course Progress:** Consider how far along the course is. If it’s already well underway, joining late might make it difficult to catch up on missed content.\\n\\n3. **Instructor Policies:** Some instructors or institutions are flexible about late enrollments, especially if you have a good reason for your delay.\\n\\n4. **Format of the Course:** Online courses might allow more flexibility with start dates, especially if they are self-paced.\\n\\n5. **Availability of Resources:** Ensure you have access to any necessary materials or resources, regardless of when you join.\\n\\nIt’s best to contact the course administrator or instructor directly to inquire about joining the course late and to discuss any possible accommodations.'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "5926dac3-d62f-4ef2-993c-a518c862bb81",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "ad4a8d0b-76d4-46cc-86b4-785da06f2782",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "bc7eb919-0f7a-41bd-aa85-82d89f347db7",
    "metadata": {},
    "outputs": [
@@ -146,6 +146,7 @@
       "- models/gemini-2.5-flash-preview-05-20\n",
       "- models/gemini-2.5-flash-preview-04-17-thinking\n",
       "- models/gemini-2.5-pro-preview-05-06\n",
+      "- models/gemini-2.5-pro-preview-06-05\n",
       "- models/gemini-2.0-flash-exp\n",
       "- models/gemini-2.0-flash\n",
       "- models/gemini-2.0-flash-001\n",
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "9326b84d-dbcd-4592-a37e-369fd3a80274",
    "metadata": {},
    "outputs": [
@@ -198,22 +199,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To give you the most accurate answer, I need a little more information!\n",
+      "That completely depends on the specific course!\n",
       "\n",
-      "Could you tell me:\n",
+      "To give you an answer, I need a little more information:\n",
       "\n",
-      "1.  **Which course are you referring to?** (e.g., a specific university course, an online platform course like Coursera or Udemy, a local workshop, etc.)\n",
-      "2.  **Do you know its start date or enrollment deadline?**\n",
+      "1.  **What course are you referring to?** (e.g., a university course, an online course from Coursera/Udemy, a local workshop, etc.)\n",
+      "2.  **When did it start, or when is it scheduled to start?**\n",
+      "3.  **Do you know if there was an enrollment deadline?**\n",
       "\n",
-      "Once I have that information, I might be able to help you find out, or at least point you in the right direction.\n",
+      "**Here's how you can generally find out:**\n",
       "\n",
-      "**In general, here's how you can find out:**\n",
+      "*   **Check the course website or listing:** This is usually the best place to find enrollment deadlines, start dates, and late registration policies.\n",
+      "*   **Contact the course provider/instructor:** If the information isn't clear online, reach out to them directly.\n",
+      "*   **Look for an FAQ section:** Many courses have an FAQ that might address late enrollment.\n",
       "\n",
-      "*   **Check the course website:** This is usually the best place for enrollment deadlines and late registration policies.\n",
-      "*   **Contact the course provider/instructor:** Look for a contact email or phone number.\n",
-      "*   **Look at the registration portal:** If it's an academic course, the university/college registration system will have this info.\n",
+      "**In general:**\n",
       "\n",
-      "Let me know the details!\n"
+      "*   **Self-paced online courses:** You can often join these anytime.\n",
+      "*   **Courses with fixed start/end dates (like university semesters or cohort-based online programs):** These often have stricter deadlines. Sometimes late enrollment is possible, but you might have missed some material.\n",
+      "*   **Workshops/short courses:** These often have firm cut-offs due to limited space or pre-course preparation.\n",
+      "\n",
+      "**If you can tell me more about the course, I might be able to give you more specific advice on where to look!**\n"
      ]
     }
    ],
@@ -248,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
