fix: notebook rag-intro

--- a/01-intro/RAG-Intro.ipynb
+++ b/01-intro/RAG-Intro.ipynb
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "id": "bc4d11a7-7a4a-4a7d-8614-ec0bf94f76b7",
    "metadata": {},
    "outputs": [],
@@ -265,23 +265,38 @@
     "        context = context + f\"section: {doc['section']}\\nquestion: {doc['question']}\\nanswer: {doc['text']}\\n\\n\"\n",
     "    return context\n",
     "\n",
-    "def build_prompt(question: str, \n",
-    "                filter_dict={\"course\": \"data-engineering-zoomcamp\"},\n",
-    "                num_results = 5,\n",
-    "                boost={\"question\": 3.0, \"section\": 0.5}) -> str:\n",
+    "\n",
+    "def search(question: str,\n",
+    "           filter_dict={\"course\": \"data-engineering-zoomcamp\"},\n",
+    "           num_results = 5,\n",
+    "           boost={\"question\": 3.0, \"section\": 0.5})  -> list:\n",
+    "\n",
     "    search_results = index.search(\n",
     "        query=question,\n",
     "        boost_dict=boost,\n",
-    "        num_results=5,\n",
+    "        num_results=num_results,\n",
     "        filter_dict=filter_dict\n",
     "    )\n",
+    "    return search_results\n",
+    "\n",
+    "\n",
+    "def build_prompt(question: str) -> str: \n",
+    "    search_results = search(question)\n",
     "    context = build_context(search_results)\n",
-    "    return PROMPT_TEMPLATE.format(question=question, context=build_context(results))"
+    "    return PROMPT_TEMPLATE.format(question=question, context=build_context(results))\n",
+    "\n",
+    "\n",
+    "def llm(prompt: str) -> str:\n",
+    "    response = client.chat.completions.create(\n",
+    "                model='gpt-4o',\n",
+    "                messages=[{\"role\": \"user\", \"content\": prompt}]\n",
+    "        )\n",
+    "    return response.choices[0].message.content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "id": "7dab7652-2292-4e3a-bb75-a776ea277db8",
    "metadata": {},
    "outputs": [
@@ -339,52 +354,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "5e3bb5fa-fd57-4f68-a1c0-eccb3640991c",
+   "execution_count": 66,
+   "id": "52ca7975-c52a-4d33-977a-dec8f99d87e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = build_prompt(question)"
+    "def rag(query: str) -> str:\n",
+    "    prompt = build_prompt(query)\n",
+    "    answer = llm(prompt)\n",
+    "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "f2663d04-bffc-45e2-9cc1-1a108ee57bd3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = client.chat.completions.create(\n",
-    "    model='gpt-4o',\n",
-    "    messages=[{\"role\": \"user\", \"content\": prompt}]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "be904f27-954e-418e-8e08-d977107e95dd",
+   "execution_count": 67,
+   "id": "c79613d3-5e45-4539-8596-78e344785154",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Yes, even if you don't register, you're still eligible to submit the homeworks. Be aware, however, that there will be deadlines for turning in the final projects. So don't leave everything for the last minute.\""
+       "'Yes, even if the course has already started, you can still enroll and submit the homeworks. However, be aware of the deadlines for turning in the final projects.'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response.choices[0].message.content"
+    "rag(question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "00ce85b0-c497-4c77-a51b-43a042e13809",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NONE'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag(\"how do i run kafka?\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ca7975-c52a-4d33-977a-dec8f99d87e0",
+   "id": "7d8290bc-12bb-4955-8358-5df85d84e371",
    "metadata": {},
    "outputs": [],
    "source": []
