homework-2 vector search qdrant

--- a/02-vector-search/homework-2.ipynb
+++ b/02-vector-search/homework-2.ipynb
@@ -466,12 +466,7 @@
     "\n",
     "After the data is inserted, use the question from Q1 for querying the collection.\n",
     "\n",
-    "What's the highest score in the results? (The score for the first returned record)\n",
-    "\n",
-    "0.97\n",
-    "0.87\n",
-    "0.77\n",
-    "0.67"
+    "What's the highest score in the results? (The score for the first returned record)"
    ]
   },
   {
@@ -536,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "46146d43",
    "metadata": {},
    "outputs": [
@@ -554,6 +549,7 @@
    "source": [
     "from qdrant_client import QdrantClient, models\n",
     "\n",
+    "# Start the client\n",
     "client = QdrantClient(\"http://localhost:6333\")\n",
     "client.info()"
    ]
@@ -580,7 +576,7 @@
     "collection_name = \"homework-2\"\n",
     "model_name = \"BAAI/bge-small-en\"\n",
     "\n",
-    "# Create the collection\n",
+    "# Initialize the collection\n",
     "client.create_collection(\n",
     "    collection_name=collection_name,\n",
     "    vectors_config=models.VectorParams(\n",
@@ -613,15 +609,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "68904d95",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating data enitites for Qdrant (points)\n",
     "points = []\n",
     "\n",
     "for id, doc in enumerate(documents):\n",
+    "    # When adding the data, use both question and answer fields\n",
     "    text = doc.get('question', \"\") + \" \" + doc.get('text', \"\")\n",
+    "\n",
     "    point = models.PointStruct(\n",
     "        id=id,\n",
     "        vector=models.Document(text=text, model=model_name),\n",
@@ -658,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "df93fdf6",
    "metadata": {},
    "outputs": [
@@ -758,6 +757,7 @@
     }
    ],
    "source": [
+    "# Index the data\n",
     "client.upsert(\n",
     "    collection_name=collection_name,\n",
     "    points=points\n",
@@ -766,11 +766,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "d9029e44",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# function for vector search\n",
     "def search(query, limit=1):\n",
     "\n",
     "    results = client.query_points(\n",
@@ -793,7 +794,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# do the semantic search with the query from Question 1\n",
+    "# do the vector search with the query from Question 1\n",
     "search_result = search(query)"
    ]
   },
@@ -821,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "20fc70e9",
    "metadata": {},
    "outputs": [
@@ -840,6 +841,7 @@
     }
    ],
    "source": [
+    "# check the metadata of the search result\n",
     "pprint(search_result.points[0].payload['question'])\n",
     "pprint(search_result.points[0].payload['text'])"
    ]
