fix: typo homework-2

--- a/02-vector-search/homework-2.ipynb
+++ b/02-vector-search/homework-2.ipynb
@@ -339,7 +339,7 @@
    "source": [
     "Is it different from Q3? If yes, why?\n",
     "\n",
-    "Answer: *Yes, the result is different because the question in the document with index 0 contains question semantically close to the query!*"
+    "Answer: *Yes, the result is different because the document with index 0 contains question semantically close to the query!*"
    ]
   },
   {
