--- a/workshops/agents/homework-0a.ipynb
+++ b/workshops/agents/homework-0a.ipynb
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "823064bd",
    "metadata": {},
    "outputs": [
@@ -889,7 +889,7 @@
     }
    ],
    "source": [
-    "!pip install fastmcp"
+    "%pip install fastmcp"
    ]
   },
   {
@@ -1089,7 +1089,7 @@
     "```json\n",
     "{\"jsonrpc\": \"2.0\", \"id\": 3, \"method\": \"tools/call\", \"params\": {\"name\": \"get_weather\", \"arguments\": {\"city\":\"Berlin\"}}}\n",
     "```\n",
-    "7) Response:\n",
+    "7) Response (Q5 answer):\n",
     "```json\n",
     "{\"jsonrpc\":\"2.0\",\"id\":3,\"result\":{\"content\":[{\"type\":\"text\",\"text\":\"20.0\"}],\"structuredContent\":{\"result\":20.0},\"isError\":false}}\n",
     "```"
@@ -1476,7 +1476,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm_zoomcamp",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1490,7 +1490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
